--- a/app/static/AngularJS/Templates/referencefactura.html
+++ b/app/static/AngularJS/Templates/referencefactura.html
@@ -7,12 +7,12 @@
         <!-- busqueda INI -->
         <div>
             <div class="dropdown lineal">
-                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Busqueda por...
+                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Búsqueda por...
                     <span class="caret"></span></button>
                 <ul class="dropdown-menu" >
                     <li style="cursor:pointer"><a ng-click="setSearchType(1)">ID Cliente</a></li>
                     <li style="cursor:pointer"><a ng-click="setSearchType(2)">Nombre</a></li>
-                    <li style="cursor:pointer"><a ng-click="setSearchType(3)">ID Doc</a></li>
+                    <li style="cursor:pointer"><a ng-click="setSearchType(3)">ID Documento</a></li>
                 </ul>
             </div>
             <div class="lineal">
@@ -36,7 +36,7 @@
             <div class="ibox-content">
                 <div class="row">
                     <div class="col-sm-12">
-                        <table id="tblClient" class="table table-striped table-bordered table-hover">
+                        <table id="tblClient" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
                                     <th>ID Cliente</th>
@@ -68,9 +68,10 @@
         </div>
         <!--  Form clientes Fin -->
         <!--  Form grids INI -->
-        <div class="ibox float-e-margins">
+        <!--    FILTRO PARA CLIENTES-->
+        <div class="ibox float-e-margins" ng-show="Clientefiltro">
             <div class="ibox-title">
-                <h5>Detalles<small> Factura / Pedido / Cotizaciones</small></h5>
+                <h5>Búsqueda Clientes <small> Factura / Pedido / Cotizaciones</small></h5>
                 <div class="ibox-tools">
                     <a class="collapse-link">
                         <i class=""></i>
@@ -123,7 +124,7 @@
                             <!-- tabla lotes no Aplicado -->
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <table id="tblFactura" class="table table-striped table-bordered table-hover">
+                                    <table id="tblFactura" class="table table-striped table-bordered">
                                         <thead>
                                             <tr>
                                                 <th>Id Documento</th>
@@ -166,15 +167,15 @@
                             <!-- tabla lotes no Aplicado -->
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <table id="tblPedido" class="table table-striped table-bordered table-hover">
+                                    <table id="tblPedido" class="table table-striped table-bordered">
                                         <thead>
                                             <tr>
                                                 <th>Id Documento</th>
                                                 <th>Nombre Sucursal</th>
                                                 <th>Nombre Departamento</th>
+                                                <th>Importe</th>
                                                 <th>Id Cliente</th>
                                                 <th>Nombre Cliente</th>
-                                                <th>Importe</th>
                                                 <th>Fecha</th>
                                                 <th>Referencia</th>
                                                 <th>Generar Referencia</th>
@@ -185,9 +186,9 @@
                                                 <td>{{pedido.idDocumento}}</td>
                                                 <td>{{pedido.nombreSucursal}}</td>
                                                 <td>{{pedido.nombreDepartamento}}</td>
+                                                <td>{{pedido.saldo| currency:"$":2}}</td>
                                                 <td>{{pedido.idCliente}}</td>
                                                 <td>{{pedido.nombreCliente}}</td>
-                                                <td>{{pedido.saldo| currency:"$":2}}</td>
                                                 <td>{{pedido.fecha}}</td>
                                                 <td>{{pedido.referencia}}</td>
                                                 <td>
@@ -207,7 +208,7 @@
                             <!-- tabla lotes no Aplicado -->
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <table id="tblReference" class="table table-striped table-bordered table-hover">
+                                    <table id="tblReference" class="table table-striped table-bordered">
                                         <thead>
                                             <tr>
                                                 <th>Id Documento</th>
@@ -247,7 +248,191 @@
                 <!-- div tabs end -->
             </div>
         </div>
-        <!--  Form grids INI -->
+        <!--  TERMINA FILTRO PARA CLIENTES -->
+
+
+
+
+        <!--  INICIA FILTRO PARA DOCUMENTOS -->
+         <div class="ibox float-e-margins" ng-show="DocumentoFiltro">
+            <div class="ibox-title">
+                <h5>Búsqueda Documento<small> Factura / Pedido / Cotizaciones</small></h5>
+                <div class="ibox-tools">
+                    <a class="collapse-link">
+                        <i class=""></i>
+                    </a>
+                </div>
+            </div>
+            <div class="ibox-content">
+                <!-- filtros INI -->
+                <div class="row">
+                    <br>
+                    <div class="col-sm-12">
+                        <div class="dropdown lineal">
+                            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><span class="glyphicon glyphicon-filter"> </span> Filtro por Empresa
+                                <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li style="cursor:pointer" ng-repeat="empresa in empresas" ng-click="seletionCompanyDoc(empresa.emp_idempresa,empresa.emp_nombre)"><a> {{empresa.emp_nombre}} </a></li>
+                            </ul>
+                        </div>
+                        <div class="dropdown lineal" ng-show="sinsuc">
+                            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><span class="glyphicon glyphicon-filter"> </span> Filtro por Sucursal
+                                <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li style="cursor:pointer" ng-repeat="sucursal in sucursales" ng-click="seletionBranchoOffice(sucursal.suc_idsucursal,sucursal.suc_nombre)"><a> {{sucursal.suc_nombre}} </a></li>
+                            </ul>
+                        </div>
+                        <div class="dropdown lineal" ng-show="sinsuc">
+                            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><span class="glyphicon glyphicon-filter"> </span> Filtro por Departamento
+                                <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li style="cursor:pointer" ng-repeat="departamento in departamentos" ng-click="selectDepartment(departamento.dep_iddepartamento,departamento.dep_nombre)"><a> {{departamento.dep_nombre}} </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- filtros FIN -->
+                <!-- div tabs INI -->
+                <div class="row">
+                    <br>
+                    <div class="col-sm-12">
+                        <!-- tabs inicio-->
+                        <ul class="nav nav-pills newcolor">
+                            <li ng-class="panels[0].className" ng-click="setActiveClass(panels[0])"><a href="#">{{panels[0].name}}</a></li>
+                            <li ng-class="panels[1].className" ng-click="setActiveClass(panels[1])"><a href="#">{{panels[1].name}}</a></li>
+                            <li ng-class="panels[2].className" ng-click="setActiveClass(panels[2])"><a href="#">{{panels[2].name}}</a></li>
+                        </ul>
+                        <!-- tabs Fin-->
+                        <!-- tabContent1 Ini-->
+                        <div ng-show="panels[0].active">
+                            <br>
+                            <!-- tabla lotes no Aplicado -->
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table id="tblFacturaDoc" class="table table-striped table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>Id Documento</th>
+                                                <th>Nombre Sucursal</th>
+                                                <th>Departamento</th>
+                                                <th>Id Cliente</th>
+                                                <th>Nombre Cliente</th>
+                                                <th>Importe</th>
+                                                <th>Saldo</th>
+                                                <th>Fecha</th>
+                                                <th>Referencia</th>
+                                                <th>Generar Referencia</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="fact in lstFacturaDoc">
+                                                <td>{{fact.folio}}</td>
+                                                <td>{{fact.nombreSucursal}}</td>
+                                                <td>{{fact.origenMovimiento}}</td>
+                                                <td>{{fact.idCliente}}</td>
+                                                <td>{{fact.nombreCliente}}</td>
+                                                <td>{{fact.importe | currency:"$":2}}</td>
+                                                <td>{{fact.saldo | currency:"$":2}}</td>
+                                                <td>{{fact.fecha}}</td>
+                                                <td>{{fact.referencia}}</td>
+                                                <td>
+                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(fact)"><span class="glyphicon glyphicon-share"> </span></button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!-- tabla lotes no Aplicado  FIN-->
+                        </div>
+                        <!-- tabContent1 Fin-->
+                        <!-- tabContent1 Ini-->
+                        <div ng-show="panels[1].active">
+                            <br>
+                            <!-- tabla lotes no Aplicado -->
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table id="tblPedidoDoc" class="table table-striped table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>Id Documento</th>
+                                                <th>Nombre Sucursal</th>
+                                                <th>Nombre Departamento</th>
+                                                <th>Importe</th>
+                                                <th>Id Cliente</th>
+                                                <th>Nombre Cliente</th>
+                                                <th>Fecha</th>
+                                                <th>Referencia</th>
+                                                <th>Generar Referencia</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="pedido in lstPedidoDoc">
+                                                <td>{{pedido.idDocumento}}</td>
+                                                <td>{{pedido.nombreSucursal}}</td>
+                                                <td>{{pedido.nombreDepartamento}}</td>
+                                                <td>{{pedido.saldo| currency:"$":2}}</td>
+                                                <td>{{pedido.idCliente}}</td>
+                                                <td>{{pedido.nombreCliente}}</td>
+                                                <td>{{pedido.fecha}}</td>
+                                                <td>{{pedido.referencia}}</td>
+                                                <td>
+                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(pedido)"><span class="glyphicon glyphicon-share"> </span></button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!-- tabla lotes no Aplicado  FIN-->
+                        </div>
+                        <!-- tabContent1 Fin-->
+                        <!-- tabContent1 Ini-->
+                        <div ng-show="panels[2].active">
+                            <br>
+                            <!-- tabla lotes no Aplicado -->
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table id="tblReferenceDoc" class="table table-striped table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>Id Documento</th>
+                                                <th>Nombre Sucursal</th>
+                                                <th>Nombre Departamento</th>
+                                                <th>Importe</th>
+                                                <th>Id Cliente</th>
+                                                <th>Nombre Cliente</th>
+                                                <th>Fecha</th>
+                                                <th>Referencia</th>
+                                                <th>Generar Referencia</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="cotizacion in lstCotizaciondOC">
+                                                <td>{{cotizacion.idDocumento}}</td>
+                                                <td>{{cotizacion.nombreSucursal}}</td>
+                                                <td>{{cotizacion.nombreDepartamento}}</td>
+                                                <td>{{cotizacion.saldo | currency:"$":2}}</td>
+                                                <td>{{cotizacion.idCliente}}</td>
+                                                <td>{{cotizacion.nombreCliente}}</td>
+                                                <td>{{cotizacion.fecha}}</td>
+                                                <td>{{cotizacion.referencia}}</td>
+                                                <td>
+                                                    <button class="btn btn-default btn-icon btn-circle" data-toggle="modal" data-target="#myModal" ng-click="generateReference(cotizacion)"><span class="glyphicon glyphicon-share"> </span></button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!-- tabla lotes no Aplicado  FIN-->
+                        </div>
+                        <!-- tabContent1 Fin-->
+                    </div>
+                </div>
+                <!-- div tabs end -->
+            </div>
+        </div>
     </div>
     <!-- container end -->
 </div>
